fixed header name alignment

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ html {
 
 .name {
   flex-grow: 1;
-  text-align: center;
+  text-align: left;
   font-size: 1.5rem;
   font-weight: bold;
   color: white;
